--- a/public/study_style.css
+++ b/public/study_style.css
@@ -53,7 +53,7 @@ header .box-title {
 .box-title {
   width: calc(100% - 40px);
   height: 64px;
-  line-height: 64px;
+  line-height: 25px;
   padding: 0 20px;
   display: inline-block;
   cursor: pointer;
@@ -64,6 +64,7 @@ header .box-title {
   width: calc(100% - 40px);
   padding: 30px 20px;
   font-size: 12pt;
+  display: none;
   display: none;
 }
 
@@ -102,7 +103,7 @@ input[type="radio"]:checked + .box .box-content form {
 }
 
 .box-content img {
-  max-width: 300px;
+  max-width: 500px;
   width: 100%;
   height: auto;
 }
